css/glb.css
body {
	font-family:Helvetica Neue, Verdana, Geneva, sans-serif;
	margin:0;
	color:#000;
	overflow:hidden;
	/*background:rgb(250, 255, 250);*/
}

.wrapper {
	/*padding pushes container out but content stays in position horizontally*/
	margin:auto;
}

div{

}

a {
	text-decoration:none;
	color:#FC0;
}

a:hover {
	text-decoration:underline;
}

#body {
	position:relative;
}

#banner {
	padding:0 10px;
	background:#333;
	height:5em;
	overflow-y:visible;
}

#logo{
	float:left;
	height:5em;
}

#logo:before{    /* create a full-height inline block pseudo=element */
    content:' ';
    display:inline-block;
    vertical-align:middle;  /* vertical alignment of the inline element */
    height:100%;
}

#logo img{
	width:4em;
	height:auto;
	display:inline-block;
    vertical-align:middle;
}

#menu{
	float:left;
	margin-left:10px;
}

#menu ul{
	margin:0;
	list-style-type:none;
	padding:0;
}

#menu ul li{
	color:#FC0;
	cursor:pointer;
	float:left;
	line-height:5em;
}

#menu ul li a{
	display:block;
	padding:0 10px;
	text-decoration:none;
	transition:all 1s ease 0.1s;
	-moz-transition:all 1s ease 0.1s;
	-webkit-transition:all 1s ease 0.1s;
	-o-transition:all 1s ease 0.1s;
}

#menu ul li a:hover{
	color:#555;
	background:#FC0;
}

#mobile_menu_icon{
	padding:5px;
	display:inline-block;
    vertical-align:middle;
}

.mobile_menu_icon_stripe{
	padding:2px 10px;
	background:#FFF;
}

.mobile_menu_icon_stripe:nth-child(2){
	margin:4px 0;
}

#mobile_menu{
	position:relative;
	float:right;
	height:5em;
	display:none;
}

#mobile_menu:before{    /* create a full-height inline block pseudo=element */
    content:' ';
    display:inline-block;
    vertical-align:middle;  /* vertical alignment of the inline element */
    height:100%;
}

#mobile_menu_container{
	position:absolute;
	background:#FE5F5E;
	visibility:hidden;
	z-index:0;
	top:5em;
	right:-12em;
	width:10em;
	transition:all 1s ease 0.1s;
	-moz-transition:all 1s ease 0.1s;
	-webkit-transition:all 1s ease 0.1s;
	-o-transition:all 1s ease 0.1s;
}

#mobile_menu:hover div#mobile_menu_container{
	visibility:visible;
	right:0;
}

#mobile_menu:hover div#mobile_menu_icon .mobile_menu_icon_stripe{
	background:#FE5F5E;
}

#mobile_menu ul{
	margin:0;
	list-style-type:none;
	padding:0;
}

#mobile_menu ul li a{
	display:block;
	padding:10px;
	font-size:80%;
	color:#000;
	line-height:2em;
	text-decoration:none;
}

#mobile_menu ul li a:hover{
	background:rgb(255, 255, 255);
	background:rgba(255, 255, 255, 0.75);
}

#cover {
	color:#FFF;
	height:30em;
	overflow:hidden;
	background:#FAFAFA;
	border-bottom:1px solid #EAEAEA;
}

#cover img{
	width:100%;
	height:auto;
}

#notice {
	padding:10px;
	background:#F00;
	color:#FFF;
	display:none;
}

#message_container{
	float:right;
	height:5em;
}

#message_container:before{    /* create a full-height inline block pseudo=element */
    content:' ';
    display:inline-block;
    vertical-align:middle;  /* vertical alignment of the inline element */
    height:100%;
}

#message{
	border:1px solid #FE5F5E;
	color:#FFF;
	padding:5px 15px;
	border-radius:5em;
	-webkit-border-radius:5em;
	-moz-border-radius:5em;
	-o-border-radius:5em;
	cursor:pointer;
	display:inline-block;
  vertical-align:middle;
  transition:border 1s ease 0.1s;
	-moz-transition:border 1s ease 0.1s;
	-webkit-transition:border 1s ease 0.1s;
	-o-transition:border 1s ease 0.1s;
}

#message:hover{
	border:1px solid #FFF;
}

#short_name{
	color:#FFF;
	float:left;
	line-height:5em;
	font-weight:bold;
	font-family:minion pro;
}

#buffer {
	position:fixed;
	z-index:200;
	padding:2em 0;
	color:#036;
	font-size:80%;
	text-align:center;
}

#noscript{
	background:#F60;
	text-align:center;
	color:#FFF;
	width:100%;
	position:fixed;
	z-index:20;
	padding:10px;
}

#dialog_box{
	color:#09F;
	display:none;
	position:fixed;
	z-index:100;
	background:#FFF;
}

#dialog_box_head{
	padding:10px;
	background:#555;
	color:#FFF;
	border-bottom:1px solid #EAEAEA;
}

#dialog_box_body{
	padding:10px;
	border-bottom:1px solid #EAEAEA;
}

#dialog_box_foot{
	padding:10px;
}

.but{
	/*not floating a div without a width declaration causes it to take 100% of parent*/
	/*floating a div without a width declaration causes it to be as wide as to only occypy its content*/
	/*floating a div with a width declaration causes it to take that % of parent*/
	background:#FC0;
	font-size:80%;
	padding:10px;
	color:#036;
	cursor:pointer;
	border:1px solid #F90;
	text-align:center;
}

.but:hover{
	box-shadow:0 0 1px #E1E1E1;
}

#msg_but{
	width:10%;
	margin-right:10px;
	float:right;
}

#send_msg_but{
	float:right;
	width:20%;
}

#dialog_box_overlay{
	display:none;
	background:#333;
	opacity:0.5;
	filter:alpha(opacity=50);
	-moz-opacity:0.5;
	-webkit-opacity:0.5;
	-khtml-opacity: 0.5;
	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
	height:100%;
	width:100%;
	position:fixed;
	z-index:90;
}

div#msg_area {
	border:none;
	font-size:80%;
	width:100%;
	max-width:100%;
	min-height:5em;
	/*a word (charcters without a space) stays on a single line by default - it does not wrap.
	so having a very long one causes it to get off the text area*/
	background:#FAFAFA;
	transition:all 0.5s linear 0.1s;
	-moz-transition:all 0.5s linear 0.1s;
	-webkit-transition:all 0.5s linear 0.1s;
	-o-transition:all 0.5s linear 0.1s;
}

div#msg_area img{
	max-width:100%;
	height:auto;
}

div#msg_area:focus{
	min-height:10em;
	transition:all 0.5s linear 0.1s;
	-moz-transition:all 0.5s linear 0.1s;
	-webkit-transition:all 0.5s linear 0.1s;
	-o-transition:all 0.5s linear 0.1s;
}

#msg_tit{
	float:left;
	width:50%;
}

#msg_esc{
	float:right;
	color:#CCC;
	font-weight:bold;
	cursor:pointer;
	transform:rotate(45deg);
	-webkit-transform:rotate(45deg);
	-o-transform:rotate(45deg);
	text-align:center;
}

#msg_esc:hover{
	color:#A1A1A1;
}

.spacer{
	clear:both;
}

#dialog_head_spacer{
	clear:both;
}

#dialog_foot_spacer{
	clear:both;
}

#hlink{
	font-size:100%;
}

#hlink a:hover{
	color:#069;
}
/* ... */

